Add in index.html structure html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>Hello, world!</h1>
-<p>Some text</p>
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <p>Some text</p>
+  </body>
+</html>
