--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Hello, world!</h1>
     <p>Some text</p>
     <img src="images/breaching_whale.jpg" alt="Description">
+    <img src="images/tech_support_cheat_sheet.jpg" alt="Fish" height="500" width="750">
   </body>
 </html>
