--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>About</h1>
-    <p>
+       <p>
       This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+      tutorial <em>Learn Enough Git to Be Dangerous</em>.
     </p>
   </body>
 </html>
