--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <a href="about.html">About</a>
     <p>Some text</p>
     <img src="images/breaching_whale.jpg" alt="Description">
     <img src="images/tech_support_cheat_sheet.jpg" alt="Fish" height="500" width="750">
