--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough Git to Be Dangerous</em>.
     </p>
+    <a href="index.html">Go back to main page</a>
   </body>
 </html>
